# L3-Ilian-skew-binary

./: README.md  dune-project  numrep.opam
doc/presentation/: main.tex
lib/: arena.ml  arena.mli  dune  skew.ml  skew.mli
test/: dune  test_representation.ml  utils.ml
